--- a/src/index.css
+++ b/src/index.css
@@ -81,3 +81,28 @@ code {
     background-color: blue;
     border-radius: 100px;
 }
+.container-list {
+    width: 320px;
+    padding: 20px;
+    background-color: lightseagreen;
+}
+.chat-box {
+    width: 100%;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.chat-box span {
+    font-size: 10px;
+    background-color: white;
+    border-radius: 100px;
+    padding: 6px;
+}
+.chat-box:hover {
+    cursor: pointer;
+}
+.active {
+    background-color: yellowgreen;
+}
